# raye-local-pathfinding

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  azure-pipelines.yml  package.xml  parameter_sweep.bash  parameter_sweep2.bash  parameter_sweep3.bash  path-evaluation-planners2.bash  path-evaluation-runtime_seconds.bash
.circleci/: config.yml
exactais_analysis/: boat_tracker.py  boat_tracker_visualization.py  ships_scraper.py  ships_visualization.py
install/: Dockerfile  README.md  install-ompl-ubuntu.sh  install_output.txt  ompl_install_instructions.bash  visualisation.md
install_deps/: install_deps_linux.sh  install_ompl_ubuntu.sh
json/: README.md
land_masses/: SalishSea.nc  land_mass_1.csv  land_mass_2.csv  land_mass_creator.py  netCDF.py  olympic_peninsula_50.0m_08_28_2022-13_48_40.kml  olympic_peninsula_depth_50m.csv  vancouver_depth_5m_10_04_2021-23_54_17.kml  vancouver_depth_5m_10_04_2021-23_54_17.txt  vancouver_depth_5m_10_11_2021-10_28_14.csv  vancouver_depth_5m_10_11_2021-10_28_14.kml  vancouver_island_depth_50.0m_08_28_2022-15_19_51.csv  vancouver_island_depth_50m.kml
launch/: MOCK_AIS.launch  MOCK_sensors.launch  all.launch  launch_all_mocks.launch  launch_all_mocks2.launch  main_loop_and_interface.launch  path_evaluator.launch
lib/: core_libs.cmake
msg/: AIS.msg  AISMsg.msg  AISShip.msg  AIS_msg.msg  AIS_ship.msg  GPS.msg  addBoat.msg  desired_heading.msg  globalWind.msg  global_path.msg  heading.msg  local_path.msg  path.msg  wind.msg  windSensor.msg  wind_sensor.msg
python/: .MOCK_wind_sensor.py.swp  .Sailbot.py.swo  .main_ros_node.py.swp  MOCK_AIS.py  MOCK_AIS.py.orig  MOCK_UDP_bridge.py  MOCK_controller_and_boat.py  MOCK_exactAIS.py  MOCK_global_planner.py  MOCK_sensors.py  MOCK_wind_sensor.py  Path.py  (+40 more)
src/: CMakeLists.txt
src/datatypes/: Coordinate.h  Obstacle.h
src/example/: Planner.cpp  Planner.h
src/planning/: Coordinate.h  Obstacle.h  Planner.cpp  Planner.h  SailboatGoalRegion.cpp  SailboatGoalRegion.h  SailboatStatePropagator.cpp  SailboatStatePropagator.h  TimeObjective.cpp  TimeObjective.h  ValidityChecker.cpp  ValidityChecker.h
src/util/: AngleCalc.cpp  AngleCalc.h  CoordinateTranslator.cpp  CoordinateTranslator.h  UTM.cpp  UTM.h
(+39 files in other folders)
